[project]
name = "nr9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.9",
    "dm-acme",
    "dm-control",
    "jax>=0.10.2",
    "optax>=0.2.8",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
]

[tool.uv.sources]
dm-control = { path = "dm_control" }
dm-acme = { path = "acme" }
