[project]
name = "nr9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.9",
    "optax>=0.2.8",
    "loguru>=0.7.3",
    "pillow>=12.2.0",
    "flax>=0.12.7",
    "dm-control>=1.0.43",
    "acme>=5.6.0",
    "tensorboardx>=2.6.5",
    "tensorboard>=2.21.0",
]
